<resources>
    <string name="app_name">Music Demo</string>
    <string name="menu_icon_desc">Menu</string>
    <string name="notification_icon_desc">Notifications</string>
    <string name="settings_icon_desc">Settings</string>
    <string name="ic_baseline_home_24">Home</string>
    <string name="search_icon_desc">Search</string>
    <string name="account_icon_desc">Account</string>
</resources>
