<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:contentDescription="@string/menu_icon_desc"
            android:padding="8dp"
            android:layout_marginEnd="60dp"/>

        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:contentDescription="@string/notification_icon_desc"
            android:layout_marginEnd="30dp"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_24"
            android:contentDescription="@string/settings_icon_desc"
            android:layout_marginEnd="30dp"
            android:padding="8dp"/>
    </LinearLayout>

    <!-- Seek Bar -->
    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_marginTop="16dp"/>

    <!-- Bottom Icons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_home_24"
            android:contentDescription="@string/ic_baseline_home_24"
            android:layout_marginEnd="30dp"/>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            android:contentDescription="@string/search_icon_desc"
            android:layout_marginEnd="30dp"/>

        <ImageView
            android:id="@+id/account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_account_box_24"
            android:contentDescription="@string/account_icon_desc"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>

    <!-- Compose View for Dynamic UI -->
    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/seek_bar"/>

</RelativeLayout>
